# TinkoffInvestSDK

./: .Doxyfile.swp  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  customservice.cpp  customservice.h  investapiclient.cpp  investapiclient.h  marketdataservice.cpp  marketdataservice.h  sandboxservice.cpp  sandboxservice.h  servicereply.cpp  servicereply.h  tinkoffInvestConsts.h  tinkoffInvestPlugin.cpp  tinkoffInvestPlugin.h  tinkoffInvestPlugin.json  tinkoffInvestUtils.h  usersservice.cpp  usersservice.h
SDK/: customservice.h  investapiclient.h  sandboxservice.cpp
SDK/cmake/: fix_keywords.sh
cmake/: CMakeLists.txt  common.cmake  fix_keywords.bat  fix_keywords.cmd  fix_keywords.sh
docs/: annotated.html  class_abstract_async_client_call-members.html  class_abstract_async_client_call.html  class_async_client_call-members.html  class_async_client_call.html  class_custom_instruments-members.html  class_custom_instruments.html  class_custom_service-members.html  class_custom_service.html  class_info_instruments-members.html  class_info_instruments.html  class_instruments-members.html  class_instruments.html  class_invest_api_client-members.html  class_invest_api_client.html  class_last_price_instruments-members.html  class_last_price_instruments.html  class_market_data-members.html  class_market_data.html  class_market_data_handler-members.html  class_market_data_handler.html  class_market_data_stream-members.html  class_market_data_stream.html  class_operations-members.html  class_operations.html  class_orders-members.html  class_orders.html  class_orders_stream-members.html  class_orders_stream.html  class_rpc_handler-members.html  class_rpc_handler.html  class_sandbox-members.html  class_sandbox.html  class_service_reply.html  class_stop_orders-members.html  class_stop_orders.html  class_trade_instruments-members.html  class_trade_instruments.html  class_users-members.html  class_users.html  (+81 more)
docs/html/: class_custom_service-members.html  class_custom_service.html  class_instruments-members.html  class_market_data-members.html  class_operations-members.html  class_orders-members.html  class_orders.html  class_sandbox-members.html  class_service_reply-members.html  class_service_reply.html  class_users.html  classes.html  customservice_8h_source.html  dir_6f9635d4fbfa321d4c00f29df5cd540c.html  dir_9e9b5207183752d0f9b6d6064ebfe21c.html  files.html  functions_func.html  hierarchy.html  index.html  marketdataservice_8h_source.html  menudata.js  operationsservice_8h_source.html  ordersservice_8h_source.html  sandboxservice_8h_source.html  servicereply_8h_source.html  usersservice_8h_source.html
html/: annotated.html  class_custom_service-members.html  class_custom_service.html  class_custom_service__coll__graph.dot  class_custom_service__inherit__graph.dot  class_instruments-members.html  class_instruments.html  class_instruments__inherit__graph.dot  class_invest_api_client-members.html  class_invest_api_client.html  class_invest_api_client__inherit__graph.dot  class_market_data-members.html  class_market_data.html  class_market_data__coll__graph.dot  class_operations-members.html  class_operations.html  class_operations__coll__graph.dot  class_orders-members.html  class_orders.html  class_orders__inherit__graph.dot  class_sandbox-members.html  class_sandbox.html  class_sandbox__coll__graph.dot  class_service_reply-members.html  class_service_reply.html  class_stop_orders-members.html  class_stop_orders.html  class_stop_orders__coll__graph.dot  class_users-members.html  class_users.html  class_users__coll__graph.dot  classes.html  customservice_8h_source.html  dir_056ec8f0377ddc4293192cbc6b19c99c.html  dir_5480e7a72c8c735687a9fbab8eec69ee.html  dir_6f9635d4fbfa321d4c00f29df5cd540c.html  dir_9e9b5207183752d0f9b6d6064ebfe21c.html  dir_ac31755811905139e8c82217532830da.html  dir_bdc21ec0f2d4730954479bdce3411fbb.html  dir_c354a99ddc29f468256ef8de8589f5fb.html  (+71 more)
html/d0/d61/: a00100.html
html/d0/dc2/: a00104.html
html/d1/d1e/: a00087.html
html/d1/d51/: a00079.html
html/d1/dc1/: a00092.html
html/d1/dd6/: a00108.html
html/d2/d1f/: a00083.html
html/d4/dee/: a00008_source.html
html/d5/d1e/: a00103.html
html/d5/de0/: a00050_source.html
html/d5/df9/: a00044_source.html
html/d6/d2c/: a00072.html
html/d6/d5b/: a00026_source.html
html/d8/d41/: a00038_source.html
html/d9/d2e/: a00056_source.html
html/d9/d77/: a00095.html
html/d9/da5/: a00075.html
html/d9/df8/: a00096.html
html/da/d24/: a00068_source.html
html/da/d74/: a00099.html
html/da/d82/: a00091.html
html/da/dec/: a00080.html
html/db/db2/: a00020_source.html
html/db/ddf/: a00088.html
html/db/df8/: a00076.html
html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.html  pages_0.js  pages_1.html  pages_1.js  pages_2.html  pages_2.js  (+23 more)
samples/: CMakeLists.txt
samples/stream/: CMakeLists.txt  main.cpp
samples/stream_async/: CMakeLists.txt  main.cpp
samples/stream_sync/: CMakeLists.txt  main.cpp
samples/stub/: CMakeLists.txt  main.cpp
samples/unary/: CMakeLists.txt  main.cpp
services/: commontypes.cpp  commontypes.h  customservice.cpp  customservice.h  instruments.h  instrumentsservice.cpp  instrumentsservice.h  marketdata.cpp  marketdataservice.cpp  marketdataservice.h  marketdatastreamservice.cpp  marketdatastreamservice.h  operationsservice.cpp  operationsservice.h  ordersservice.cpp  ordersservice.h  ordersstreamservice.cpp  ordersstreamservice.h  rpchandler.cpp  rpchandler.h  sandbox.cpp  sandboxservice.cpp  sandboxservice.h  servicereply.cpp  servicereply.h  stopordersservice.cpp  stopordersservice.h  users.cpp  usersservice.cpp  usersservice.h
(+5 files in other folders)
